--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,8 +35,8 @@ application.langs="en"
 #
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/pastillappbd?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
-db.default.user=root
-db.default.password=""
+db.default.user=juan
+db.default.password=juan
 
 # Evolutions
 # ~~~~~
