Added temporal db connection

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,9 +34,9 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/pastillappbd?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
-db.default.user=root
-db.default.password=""
+db.default.url="jdbc:mysql://156.35.98.41:3306/pastillappbd?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
+db.default.user=pastillapp
+db.default.password="pastillapp"
 
 # Evolutions
 # ~~~~~
