Updated db conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,7 +36,7 @@ application.langs="en"
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://156.35.98.41:3306/pastillappbd?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
 db.default.user=pastillapp
-db.default.password="pastillapp"
+db.default.password=pastillapp
 
 # Evolutions
 # ~~~~~
